--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </main>
   </div>
   <audio id="bgMusic" loop autoplay>
-    <source src="/img/Rakhi-Dhagon-Ka.mp3" type="audio/mpeg">.
+    <source src="img/Rakhi-Dhagon-Ka.mp3" type="audio/mpeg">.
 </audio>
   <!-- Name input for link generation -->
   <div style="text-align:center; margin:20px;" class="generatelink">
